fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <description>Ability to hold information provided from Qualtrics integrated data of Customer Feedback information.</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>