fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/Account_Number_Sapcode__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Sapcode__c</fullName>
    <label>Account Number (Sapcode)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>