fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>55</length>
    <type>Text</type>
</CustomField>