fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>Account__r.Customer_Group_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>