fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/Q1D1__c.field-meta.xml
<CustomField>
    <fullName>Q1D1__c</fullName>
    <label>Answer 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>