fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/QID2__c.field-meta.xml
<CustomField>
    <fullName>QID2__c</fullName>
    <label>Answer 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>