fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/QID3__c.field-meta.xml
<CustomField>
    <fullName>QID3__c</fullName>
    <label>Answer 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>