fullSandbox11072023/force-app/main/default/objects/Customer_Feedback__c/fields/QID4__c.field-meta.xml
<CustomField>
    <fullName>QID4__c</fullName>
    <label>Answer 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>